ftpreview/dlli.h

#define DLLI_H
typedef void *DWYCO_LIST;
typedef DWYCO_LIST DWYCO_USER_LIST;
typedef DWYCO_LIST DWYCO_UNSAVED_MSG_LIST;
typedef DWYCO_LIST DWYCO_SAVED_MSG_LIST;
typedef DWYCO_LIST DWYCO_SERVER_LIST;
// WARNING: for "connect_all" processing, channel_destroy and call_established
// callbacks may act funny starting ca 4/2006 (ie, the id's may not match up
// between status callbacks and other callbacks. this is due to the new server
// assisted calling. use "connect_all2" interface instead.
// destroy callbacks still work as usual for other parts of the interface.
typedef void (DWYCOCALLCONV *DwycoChannelDestroyCallback)(int id, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoStatusCallback)(int id, const char *msg, int percent_done, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoVideoDisplayCallback)(int chan_id, void *img, int cols, int rows, int depth);
typedef  void (DWYCOCALLCONV *DwycoCallAppearanceCallback)(int chan_id, const char *name, const char *location, const char *uid, int len_uid, const char *call_type, int len_call_type);
typedef  void (DWYCOCALLCONV *DwycoZapAppearanceCallback)(int chan_id, const char *name, int size, const char *uid, int len_uid);
typedef  void (DWYCOCALLCONV *DwycoCallAppearanceDeathCallback)(int chan_id);
// NOTE: the call_type is a string that can be sent in by the client on the remote
// end. This can help in cases where different screening rules apply for different
// calls in the UI.
typedef  int (DWYCOCALLCONV *DwycoCallScreeningCallback)(int chan_id, int remote_wants_to_recv_your_video, int remote_wants_to_send_you_video, int remote_wants_to_recv_your_audio, int remote_wants_to_send_you_audio, int remote_wants_to_exchange_pubchat, int remote_wants_to_exchange_privchat, const char *call_type, int len_call_type, const char *uid, int len_uid, int *accept_call_style_out, char **error_msg_out);
// WARNING: recipient and reciplen will always be 0 (it isn't implemented right now.)
typedef  void (DWYCOCALLCONV *DwycoMessageSendCallback)(int id, int what, const char *recipient, int reciplen, const char *server_msg, void *user_arg);
typedef  int (DWYCOCALLCONV *DwycoPublicChatInitCallback)(int chan_id);
typedef  int (DWYCOCALLCONV *DwycoPrivateChatInitCallback)(int chan_id, const char *not_used);
// NOTE: see comment at dwyco_command_from_keyboard regarding the commands
// and parameters that will show up here during a private chat.
typedef  int (DWYCOCALLCONV *DwycoPrivateChatDisplayCallback)(int chan_id, const char *com, int arg1, int arg2, const char *str, int len);
typedef  int (DWYCOCALLCONV *DwycoPublicChatDisplayCallback)(const char *who, int len_who, const char *line, int len_line, const char *uid, int len_uid);
typedef  void (DWYCOCALLCONV *DwycoVideoDisplayInitCallback)(int chan_id, int ui_id);
typedef  void (DWYCOCALLCONV *DwycoCommandCallback)(const char *cmd, void *user_arg, int succ, const char *failed_reason);
typedef  void (DWYCOCALLCONV *DwycoAutoUpdateDownloadCallback)(int status);
// see "autoupdate check status" below for details on what the status is for this callback
typedef  void (DWYCOCALLCONV *DwycoAutoUpdateStatusCallback)(int status, const char *desc);
typedef  void (DWYCOCALLCONV *DwycoProfileCallback)(int succ, const char *reason, const char *s1, int len_s1, const char *s2, int len_s2, const char *s3, int len_s3, const char *filename, const char *uid, int len_uid, int reviewed, int regular, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoServerLoginCallback)(const char *str, int what);
typedef  void (DWYCOCALLCONV *DwycoMessageDownloadCallback)(int id, int what, const char *msgid, void *mdc_arg1);
// note: elide value since interpretation depends on type arg, so printing it
// generically can cause problems
typedef  void (DWYCOCALLCONV *DwycoChatCtxCallback)(int cmd, int ctx_id, const char *uid, int len_uid, const char *name, int len_name, int type, const char *value_elide, int val_len, int qid, int extra_arg);
typedef  void (DWYCOCALLCONV *DwycoChatCtxCallback2)(int cmd, int ctx_id, const char *uid, int len_uid, const char *name, int len_name, DWYCO_LIST lst, int qid, int extra_arg);
// the DLL calls this callback when it gets an
// unrecoverable problem. if must_exit is non-zero, the application MUST
// cleanup and EXIT as soon as possible, otherwise the DLL state could
// be corrupted in any number of ways.  the UI should popup a box with
// an informative message for the user before performing cleanup and exit.
// if must_exit is 0, it doesn't matter if the UI exits (either because
// the error wasn't a big deal, OR the dll is going to exit immediately
// when the callback returns anyways.)
//
// the args are:
// whats_the_problem - one of
#define DWYCO_EMERGENCY_DB_CHANGE 1 // when the callback returns, program continues as usual
#define DWYCO_EMERGENCY_GENERAL_PANIC 2       // on callback return, the dll exits the program
// the "dll_msg" should be helpful to tech support or for debugging.
//
typedef  void (DWYCOCALLCONV *DwycoEmergencyCallback)(int whats_the_problem, int must_exit, const char *dll_msg);
#define DWYCO_MSG_DOWNLOAD_OK 5
int DWYCOEXPORT dwyco_fetch_server_message(const char *msg_id, DwycoMessageDownloadCallback cb, void *mdc_arg1,
        DwycoStatusCallback scb, void *scb_arg1);
int DWYCOEXPORT dwyco_init();
void DWYCOEXPORT dwyco_database_login();
void DWYCOEXPORT dwyco_set_main_msg_window(void *h);
void DWYCOEXPORT dwyco_handle_msg(const char *msg, int msg_len, unsigned int message, unsigned int wp, unsigned int lp);
// must be called before dwyco_init
// this is used to set the cmd path that the windows dll can use
// if it needs to poke holes in the windows firewall. don't think it
// is used at this point.
int DWYCOEXPORT dwyco_set_cmd_path(const char *cmd, int len);
// give this function a set of files to be hashed to determine
// what version of the software is being used. the current windows
// client uses "icuii.exe" and "cdcdll.dll", for example.
// the contents of the files are concatenated and hashed.
void DWYCOEXPORT dwyco_setup_autoupdate(const char *f1, const char *f2, const char *f3, const char *f4);
// assorted zap message setup
int DWYCOEXPORT
dwyco_set_zap_data(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(bool, always_server)	// icuii: always 0
    DWUIDECLARG(bool, always_accept)    // icuii: 1 if "auto-accept quick messages" is checked
    DWUIDECLARG(bool, ignore)           // icuii: always 0
    DWUIDECLARG(bool, recv_all)         // icuii: always 1
    DWUIDECLARG(bool, zsave)            // icuii: always 0
    DWUIDECLARG(bool, use_old_timing)   // icuii: 1 if "qm's move too fast or not at all" checked (in obscure tab)
    DWUIDECLARG(bool, save_sent)   		// icuii: 1 by default, 0 to turn off automatic "sent" qm saving
    DWUIDECLARG(bool, no_forward_default)	// icuii: 0 by default
    DWUIDECLARG_END
);