bld/cdc32/old/cdcdll.pas

unit cdcdll;

{
WARNING: this file is out of date as of 2013

// delphi DLL interface for cdccore
}
{
NOTES: there are several calls that you MUST make BEFORE
calling dwyco_init when  using the server.

you must call "dwyco_set_login_password" before calling
dwyco_init since dwyco_init initiates login to the server.
this is especially important the very first time a user
runs the server enabled software, since the first login
will SET his password on the server.

also dwyco_set_cmd_path must be called with the complete
pathname of the exe (like c:\program files\foocorp\fooapp.exe)
in order for the windows firewall to be opened up for the
application.

the DwycoServerLoginCallback will be fired when the
login is complete (either ok, or failed.) If it
is OK, then you don't have to do anything else. If it
FAILS, then either the password was wrong, or the connection
to the server is hosed. The DLL will continue to try to
connect to the server periodically. If you set the password
again, that new password will be used the next time the
server connection is attempted. You can call dwyco_database_login()
to initiate a login immediately (that call does nothing if it
is already connected.)

IMPORTANT IMPORTANT IMPORTANT
you must also do some windows mickeymouse as well:
call dwyco_set_main_msg_window with the HWND of the
main window of the application (the one that gets
all the messages). after that, you must have a
delphi OnMessage handler for the Application object
that calls 

dwyco_handle_msg((const char *)&Msg, sizeof(Msg), Msg.message, Msg.wParam, Msg.lParam);

this allows the DLL to properly handle asynch DNS lookups.

AUTOUPDATE NOTES
------------------
You MUST call dwyco_setup_autoupdate before calling
dwyco_init, since the server connects may be done
at that point, and having the autoupdate signature
in place is required by the servers now.

STORE and FORWARD notes:
* there are no changes to sending messages.

* FOR TESTING: if you want to ALWAYS send thru server, you
can set the always-send-via-server flag:
dwyco_set_zap_data(1 <-- always-send-via-server flag, ....)

*NOTE: if you send someone a message that doesn't have an
account on the server (ie, someone who has never used the
serve enabled software), the message will not be delivered.

* to tell if a message needs to be fetched from the server:
check the QMS_IS_DIRECT flag on the message summary. if it's type
is NIL, then you have to fetch it with dwyco_fetch_server_message.

* NOTE: you CANNOT CALL anything other than "dwyco_fetch_server_message"
and dwyco_delete_unsaved on a msg that is stored on the server. 

* you will get DwycoMsgDownload and Status callbacks as the message fetch progresses.

* HERE IS THE WEIRD PART: if you get a DWYCO_MSG_DOWNLOAD_OK, then
the message was successfully downloaded. the NEW msgid is given
in the argument to the DOWNLOAD_OK callback. the msgid should be
the same as the msg id that was being fetch (it will now look like
a direct message instead of a server message).

* User info is now fetched from the server asynchronously
when a message arrives from someone that you haven't got
any messages from before. therefor, you might see extra
"refresh users" flags at that point.

KNOWN PROBLEMS TO BE FIXED SOON
----
* some of the error handling isn't quite debugged yet, so
if you pass bogus args to the new calls, things might get weird.
* there is no way to cancel a download at the moment
* there is no way to change your password on the server
* there is no way to find another user based on id or name
* the pal list/ignore list isn't stored on the server
* too many refresh-users, refresh-msgs going on. need better
callbacks so messages can be gotten by the client one
at a time rather than having to make them reread everything.

}
{**************************************************************************}
{                                                                          }
{    This C DLL header file first (automatic) conversion generated by:     }
{    HeadConv 4.0 (c) 2000 by Bob Swart (aka Dr.Bob - www.drbob42.com)     }
{      Final Delphi-Jedi (Darth) command-line units edition                }
{                                                                          }
{    Generated Date:   4/5/2001                                            }
{    Generated Time: 12:28:01 PM                                              }
{                                                                          }
{**************************************************************************}

interface


{=> CDCDLL.H <=}

{$IFNDEF DLLI_H}
  {$DEFINE DLLI_H}
{$ENDIF}

type DWYCO_LIST = Pointer;
type DWYCO_USER_LIST = DWYCO_LIST;
type DWYCO_DIR_LIST = DWYCO_LIST;
type DWYCO_UNSAVED_MSG_LIST = DWYCO_LIST;
type DWYCO_SAVED_MSG_LIST = DWYCO_LIST;
type DWYCO_SERVER_LIST = DWYCO_LIST;
type DWYCO_BOOL = Integer;

{note: this is a bogus type, really should figure out
how to make it open-ended like the DLL can handle}

type
DwycoArrayOfPointers = array[0..200] of PChar;

{:'a,'bs/function \([^(]*\)/\1 = function/}

type
DwycoChannelDestroyCallback = function(id: Integer; 
                                       user_arg: Pointer) : Integer; stdcall  ;

type
DwycoCallEstablishedCallback = function(id: Integer; 
                                        user_arg: Pointer;
                                        uid: PChar;
                                        len_uid: integer)  :Integer ; stdcall;

type
DwycoStatusCallback = function(id: Integer;
                               msg: PChar;
                               percent_done: Integer;
                               user_arg: Pointer)  :Integer  ; stdcall;

type
DwycoVideoDisplayCallback = function(ui_id: Integer;
                                     img: Pointer;
                                     cols: Integer;
                                     rows: Integer;
                                     depth: Integer)  : Integer ; stdcall;

type
DwycoCallAppearanceCallback = function(id: Integer;
                                       name: PChar;
                                       location: PChar;
                                       uid: PChar;
                                       len_uid: integer)  :Integer ; stdcall;

type
DwycoZapAppearanceCallback = function(id: Integer;
                                      name: PChar;
                                      size: Integer;
                                      uid: PChar;
                                      len_uid: integer)  : Integer ; stdcall;

type
DwycoCallAppearanceDeathCallback = function(id: Integer): Integer   ; stdcall;

type
DwycoCallScreeningCallback = function(chan_id: Integer;
	                              remote_wants_to_recv_your_video:Integer;
                                      remote_wants_to_send_you_video:Integer;
                                      remote_wants_to_recv_your_audio:Integer;
                                      remote_wants_to_send_you_audio:Integer;
                                      remote_wants_to_exchange_pubchat:Integer;
                                      remote_wants_to_exchange_privchat:Integer;
                                      call_type: PChar;
                                      len_call_type: Integer;
                                      uid: Pchar;
                                      len_uid: Integer;
                                      var accept_call_style: Integer;
	                              var error_msg: PChar):  Integer   ; stdcall;

type
DwycoDirectoryDownloadedCallback = function(dl: DWYCO_DIR_LIST) : Integer ; stdcall ;

// if what is MSG_SEND_FAILED and server_msg is non-zero it is a string with a
// short explanation about why the message couldn't be delivered.
type
DwycoMessageSendCallback = function(id: Integer;
                                    what: Integer;
                                    recipient: PChar;
                                    reciplen: Integer;
                                    server_msg: PChar;
                                    user_arg: Pointer)  : Integer ; stdcall;

type
DwycoPublicChatInitCallback = function(ui_id: Integer):  Integer  ; stdcall;

type
DwycoPrivateChatInitCallback = function(chan_id: Integer; ui_id: Integer;
                                        header: PChar):   Integer ; stdcall;

type
DwycoPrivateChatDisplayCallback = function(ui_id: Integer;
                                           com: PChar;
                                           arg1: Integer;
                                           arg2: Integer;
                                           str: PChar;
                                           len: Integer):   Integer ; stdcall;

type
DwycoPublicChatDisplayCallback = function(who: PChar;
                                          len_who: Integer;
                                          line: PChar;
                                          len_line: Integer;
                                          uid: PChar;
                                          len_uid: Integer):  Integer  ; stdcall;

type
DwycoVideoDisplayInitCallback = procedure(chan : Integer;
                                          ui_id : Integer)  ; stdcall;

type
DwycoCommandCallback = procedure(cmd: PChar; user_arg: Pointer; succ: Integer; fail_msg: PChar); stdcall;

type
DwycoAutoUpdateDownloadCallback = procedure(status: Integer); stdcall;

type
DwycoAutoUpdateStatusCallback = procedure(status: Integer; desc: PChar); stdcall;

type
DwycoProfileCallback = procedure(succ: integer;
	                         reason: PChar;
	                         s1: PChar; len_s1: integer;
	                         s2: PChar; len_s2:integer;
                                 s3: PChar; len_s3:integer;
                                 filename: PChar;
                                 uid: PChar; len_uid: integer;
                                 user_arg: Pointer); stdcall;


// The DLL calls this callback when it gets an unrecoverable problem. if
// must_exit is non-zero, the application MUST cleanup and EXIT as soon as
// possible, otherwise the DLL state could be corrupted in any number of ways.
// The UI should popup a box with an informative message for the user before
// performing cleanup and exit.
// if must_exit is 0, it doesn't matter if the UI exits (either because the
// error wasn't a big deal, OR the dll is going to exit immediately when the
// callback returns anyways.)
//
// the args are:
// whats_the_problem - one of
// #define DWYCO_EMERGENCY_DB_CHANGE 1 // when the callback returns, program continues as usual
// #define DWYCO_EMERGENCY_GENERAL_PANIC 2       // on callback return, the dll exits the program
// the "dll_msg" should be helpful to tech support or for debugging.

type
DwycoEmergencyCallback = procedure(whats_the_problem: Integer; must_exit: Integer; dll_msg: PChar); stdcall;
const DWYCO_EMERGENCY_DB_CHANGE = 1;
const DWYCO_EMERGENCY_GENERAL_PANIC = 2;

{
this type of callback is used for handling situations related to server-hosted
public chat (see below for details).
}
type
DwycoChatCtxCallback = procedure(cmd: Integer;
                                 id: Integer;
                                 uid: PChar; len_uid: Integer;
                                 name: PChar; name_len: Integer;
                                 dtype: Integer;
                                 str: PChar; len_str: Integer;
	                         qid: Integer;
	                         extra_arg:Integer); stdcall;
// 2010.1
type
DwycoChatCtxCallback2 = procedure(cmd: Integer;
                                  id: Integer;
                                  uid: PChar; len_uid: Integer;
                                  name: PChar; name_len: Integer;
                                  lst: DWYCO_LIST;
	                          qid: Integer;
	                          extra_arg:Integer); stdcall;
